reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_with_serde_skip-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestStructWithSerdeSkip > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestStructWithSerdeSkip,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.TestStructWithSerdeSkip, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestStructWithSerdeSkip {}
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestStructWithSerdeSkip,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestStructWithSerdeSkip,
        {},
        reflectapi_demo.tests.serde.TestStructWithSerdeSkip,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
